Fix Landing page card sizes, in mobile perfect in laptop too big

--- a/client/src/Landing.css
+++ b/client/src/Landing.css
@@ -13,8 +13,9 @@
 .login-header {
     display: flex;
     flex-shrink: 0;
-    padding: 1rem 2rem;
-    gap: 2rem;
+    min-height: 220px;
+    padding: 2rem 3rem;
+    gap: 1rem;
 }
 
 /* ========== Main Area ========= */
@@ -30,9 +31,9 @@
  .landing-grid{
     flex: 1;
     display: grid;
-    grid-template-columns: 0.5fr 2fr 300px;
-    gap: 1.5rem;
-    height: 100%;
+    grid-template-columns: 260px 1fr 280px;
+    gap: 1rem;
+    height: calc(100vh - 220px);
     overflow: hidden;
  }
 
@@ -40,8 +41,9 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 1rem;
+    gap: .75rem;
     height: 100%;
+    /* align-content: start; */
  }
 
  /* =========== PANELS =========== */
@@ -54,6 +56,7 @@
     border-radius: 24px;
     padding: 1.5rem;
     overflow: hidden;
+    min-width: 0;
  }
 
  /* ==========LOGIN PANELS ======== */
@@ -62,8 +65,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
- }
-
+ }  
 
 /* ========== CARD STYLING ======== */
 
@@ -72,9 +74,8 @@
     flex-direction: column;
     background: white;
     border-radius: 20px;
-    padding: 1rem;
-    /* height: 100%; */
-    aspect-ratio: 1.2 / 1;
+    padding: 0.75rem;
+    min-height: 0;
 }
 
 /* ========== IMAGES ======== */
@@ -82,16 +83,16 @@
 .feature-image,
 .chart-image {
     width: 100%;
-    max-height: 120px;
-    height: auto;
+    height: 100%;
     object-fit: contain;
 }
+
 .image-wrapper{
-    height: 120px;
-    /* flex: 1; */
+    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 120px;
 }
 
 /* ========== FOOTER ======== */
